--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       </li>
     </ul>
   </div>
-    <script type="module" src="/script.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
