--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 myVid.playsinline = true;
                 myVid.loop = true;
                 myVid.style.zIndex = '300';
-                myVid.style.opacity = 0.5;
+                myVid.style.opacity = '0.5';
 
                 dom.appendChild(myVid);
                 /* XRElement 생성 */
