--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Example</title>
+    <title>Life Particle video AR example</title>
     <script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
 
     <script src="https://developer.letsee.io/api/webar?key=aa440371e1ae6b53b3ea6fa9e963723447c3308967170f4b3bc0df0d5ea370be"></script>
@@ -46,4 +46,3 @@
 </script>
 </body>
 </html>
-```
