fix: Replaces tartget URI with local JSON file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     letsee.ready(() => {
         letsee.start();
         /* TARGET URI 이용한 이미지 타겟 등록 */
-        letsee.addTarget('https://developer.letsee.io/api-tm/target-manager/target-uid/62b375dad5259dc1bd303ac9')
+        letsee.addTarget('assets/avatar.json')
             .then(entity => {
                 /* 증강 대상 DomElement 생성 */
                 let dom = document.createElement('div');
