fix: resize video to 30%

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
                 let myVid = document.createElement('video');
                 myVid.id = 'myVid';
-                myVid.style.width = '20%';
-                myVid.style.height = '20%';
+                myVid.style.width = '30%';
+                myVid.style.height = '55vw';
                 myVid.src = 'assets/lpArtest.mp4';
                 myVid.playsinline = true;
                 myVid.loop = true;
-                myVid.style.zIndex = '300';
-                myVid.style.opacity = '0.5';
+                myVid.style.zIndex = '200';
+                myVid.style.opacity = '0.8';
 
                 dom.appendChild(myVid);
                 /* XRElement 생성 */
