--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
                 let myVid = document.createElement('video');
                 myVid.id = 'myVid';
-                myVid.style.width = '30%';
-                myVid.style.height = '55vw';
+                myVid.style.width = '15vw';
+                // myVid.style.height = '55vw';
                 myVid.src = 'assets/lpArtest.mp4';
                 myVid.playsinline = true;
                 myVid.loop = true;
