--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     letsee.ready(() => {
         letsee.start();
         /* TARGET URI 이용한 이미지 타겟 등록 */
-        letsee.addTarget('assets/avatar.json')
+        letsee.addTarget('https://developer.letsee.io/api-tm/target-manager/target-uid/62b4014427fb62c1932c20a9')
             .then(entity => {
                 /* 증강 대상 DomElement 생성 */
                 let dom = document.createElement('div');
@@ -21,7 +21,7 @@
 
                 let myVid = document.createElement('video');
                 myVid.id = 'myVid';
-                myVid.style.width = '15vw';
+                // myVid.style.width = '15vw';
                 // myVid.style.height = '55vw';
                 myVid.src = 'assets/lpArtest.mp4';
                 myVid.playsinline = true;
