fix: video element width to 15vw

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 let myVid = document.createElement('video');
                 myVid.id = 'myVid';
-                // myVid.style.width = '15vw';
+                myVid.style.width = '15vw';
                 // myVid.style.height = '55vw';
                 myVid.src = 'assets/lpArtest.mp4';
                 myVid.playsinline = true;
